kubernetes/laravel-tasks.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-tasks-deploy
spec:
  selector:
    matchLabels:
      app: laravel-tasks
  template:
    metadata:
      labels:
        app: laravel-tasks
    spec:
      containers:
        - image: nginx:1.14-alpine
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: "/srv/www/app"
              name: phpcode
            - mountPath: "/etc/nginx/conf.d/default.conf"
              subPath: "default.conf"
              name: phpcode
        - image: acrhackfestclarence7791.azurecr.io/php-fpm:1.0.0
          imagePullPolicy: Always
          name: php-fpm
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: "/srv/www/app"
              name: phpcode
      restartPolicy: Always
      volumes:
        - name: phpcode
          persistentVolumeClaim:
            claimName: azurefile
