kubernetes/laravel-tasks.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-tasks-svc
  labels:
    name: laravel-tasks
spec:
  type: LoadBalancer  # Use ClusterIP if using Ingress to save a public IP
  ports:
  - name: http
    port: 8888
    targetPort: 80
  selector:
    app: laravel-tasks
