kubernetes/laravel-tasks.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-tasks-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - clarence7791.australiaeast.cloudapp.azure.com
    secretName: aks-ingress-tls
  rules:
  - host: clarence7791.australiaeast.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: laravel-tasks-svc
          servicePort: 8888
